# cxx-service-template

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
cmake/: flags.compiler.gnu.cmake
src/: CMakeLists.txt
src/awesome_service/: CMakeLists.txt
